[project]
name = "dataviz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

lint.select = [
    "F",
    "E1",
    "E2",
    "E3",
    "E4",
    "E5",
    "E7",
    "E9",
    "W",
    "I",
    "N",
    "D2",
    "D3",
    "UP",
    "YTT",
    "ASYNC",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "T10",
    "EM",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TD",
    "PD",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "FURB",
    "RUF",
]
lint.ignore = [
    "FBT001",
    "FBT002",
    "S101",
    "D103",
    "D203",
    "D213",
    "S311",
    "F401",
    "F403",
    "F405",
    "PLC0414",
    "E741",
    "TD003",
    "NPY002",
    "D205",
    "PLR2004",
    "PLR0913",
    "PD901",
    "PLR0912",
    "PD011",
    "NPY201",
    "COM812",
    "ISC001",
    "I001",
]

extend-include = ["*.ipynb"]
